package de.fhmaze.engine.game.cell;

public record Sheet() {}
